[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Window/Window.gd" type="Script" id=2]
[ext_resource path="res://Window/Background.png" type="Texture" id=3]
[ext_resource path="res://Window/Die/Die.tscn" type="PackedScene" id=4]
[ext_resource path="res://Window/HealthBar/HealthBar.tscn" type="PackedScene" id=5]

[node name="Window" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 120 )
texture = ExtResource( 3 )

[node name="Level" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]

[node name="Player1Die1" parent="." instance=ExtResource( 4 )]
position = Vector2( 24, 264 )

[node name="Player2Die2" parent="." instance=ExtResource( 4 )]
position = Vector2( 488, 264 )

[node name="HealthBar1" parent="." instance=ExtResource( 5 )]
position = Vector2( 208, 264 )

[node name="HealthBar2" parent="." instance=ExtResource( 5 )]
position = Vector2( 328, 264 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
